# TrackingMoCap

./: .gitignore  pyproject.toml
notebooks/: c3d_processing_forKMH.ipynb  tracking_markers.ipynb
src/TrackingMoCap/: Tracking.py  __init__.py
